# AssetManagement

agent/: Cargo.toml
agent/config/: agent_config.yaml
agent/src/: config.rs  main.rs  rest_client.rs
agent/src/system_info/: base.rs  bios.rs  hotfix.rs  mod.rs  monitor.rs  network.rs  programs.rs  users.rs
agent/src/types/: extended.rs
nist_collector/: .env  Cargo.toml
nist_collector/src/: elastic.rs  main.rs  models.rs  nist.rs  nvd_client.rs
scap-rs-chargpt/: .env  .gitignore  README.md
scap-rs-chargpt/helper/: Cargo.toml  helper.txt
scap-rs-chargpt/helper/src/: lib.rs
scap-rs-chargpt/helper/src/cpe/: mod.rs
scap-rs-chargpt/helper/src/cve/: mod.rs
scap-rs-chargpt/helper/src/kb/: attackerkb.rs  exploit_db.rs  mod.rs
scap-rs-chargpt/helper/tests/test/: hasCertAlerts 2.0.json
scap-rs-chargpt/nvd-cves/src/: impact.rs
scap-rs-chargpt/nvd-model/: Cargo.toml
scap-rs-chargpt/nvd-model/migrations/2025-05-23-062728_initial_schema/: down.sql  up.sql
scap-rs-chargpt/nvd-model/migrations/nvd/: cve_product.sql  cves.sql  cwes.sql  exploits.sql  genel migration.sql  knowledge_base.sql  products.sql  vendors.sql
scap-rs-chargpt/nvd-model/src/: lib.rs  schema.rs  types.rs
scap-rs-chargpt/nvd-model/src/cve/: db.rs  mod.rs
scap-rs-chargpt/nvd-model/src/cve_knowledge_base/: db.rs
scap-rs-chargpt/nvd-model/src/cve_product/: db.rs
scap-rs-chargpt/nvd-model/src/cwe/: db.rs
scap-rs-chargpt/nvd-model/src/knowledge_base/: db.rs  mod.rs
scap-rs-chargpt/nvd-model/src/product/: db.rs  mod.rs
scap-rs-chargpt/nvd-server/: Cargo.toml
(+1 files in other folders)
