[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sysinfo = "0.35.1"
tonic = "0.10"
prost = "0.12"
log = "0.4"
env_logger = "0.11"
tokio-tungstenite = "0.21"
if-addrs = "0.13.4"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "lmwksta",     # NetWkstaUserEnum, WKSTA_USER_INFO_1
    "lmapibuf",    # NetApiBufferFree
    "winnt",
    "winbase",
    "winuser"
] }
winreg = "0.52"
widestring = "1.0"  # UTF-16 string dönüşümü için


[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24.0"

[target.'cfg(unix)'.dependencies]
x11 = { version = "2.21.0", optional = true }
users = "0.11.0"
