[package]
name = "nist_collector"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "gzip"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dotenv = "0.15"
log = "0.4.27"
env_logger = "0.11.8"
elasticsearch = "9.0.0-alpha.1"
tokio = { version = "1.45.0", features = ["full"] }